fixed spacing in anchor points between headers and pictures

--- a/wp-content/themes/fgstudios/assets/scss/framework/_portfolio.scss
+++ b/wp-content/themes/fgstudios/assets/scss/framework/_portfolio.scss
@@ -120,8 +120,12 @@
       margin: 15px 0;
     }
 
+    #films--main, #photos--main, #designs--main {
+      margin: 3px;
+    }
+
     .spacing {
-      margin: 30px 0 10px 0;
+      margin: 10px 0 10px 0;
     }
 
     .portfolio-display {
